<resources>
    <string name="app_name">Stand Up!</string>
    <string name="message_alarm_on">Stand Up Alarm On!</string>
    <string name="message_alarm_off">Stand Up Alarm Off!</string>
    <string name="notification_title">Stand Up Alert</string>
    <string name="notification_text">You should stand up and walk around now!</string>
    <string name="alarm_on_text">Alarm ON</string>
    <string name="alarm_off_text">Alarm OFF</string>
    <string name="message_alarm_permission_needed">Grand permission to schedule exact alarms</string>
    <string name="image_button_description">An image button that enables or disables the alarm to move around</string>
    <string name="toggle_button_left_text">Toggle button left</string>
    <string name="toggle_button_right_text">Toggle button right</string>
    <string name="interval_15_minutes">15 minutes</string>
    <string name="textview_active_between_text">Active between</string>
    <string name="start_hour"><u>09:00</u></string>
    <string name="stop_hour"><u>18:00</u></string>
    <string name="space_between_hours">"  -  "</string>
    <string name="toast_text_wrong_starthour">Start hour must be earlier than the end hour</string>
    <string name="toast_text_wrong_endhour">End hour must be later than the start hour</string>
    <string name="textview_weekdays_only_text">Weekdays only</string>
</resources>