<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <ImageView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitCenter"
        android:src="@drawable/woman_running"
        android:id="@+id/imageView_background"
        android:layout_alignParentBottom="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:background="#80ffffff"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/imageButtonAlarm"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/round_button_blue"
            android:src="@drawable/ic_notifications_active"
            android:elevation="10dp"
            android:contentDescription="@string/image_button_description" />

        <TextView
            android:id="@+id/textViewAlarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/alarm_on_text"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/imageViewToggleLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_left"
                android:contentDescription="@string/toggle_button_left_text"/>

            <TextView
                android:id="@+id/textViewInterval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interval_15_minutes"
                android:textColor="@color/black"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"/>

            <ImageView
                android:id="@+id/imageViewToggleRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_right"
                android:contentDescription="@string/toggle_button_right_text"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/textview_active_between_text"
            android:textColor="@color/black"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/textViewFromTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_hour"
                android:textColor="@color/app_color_main"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/space_between_hours"
                android:textColor="@color/black"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"/>

            <TextView
                android:id="@+id/textViewUntilTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop_hour"
                android:textColor="@color/app_color_main"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview_weekdays_only_text"
                android:textColor="@color/black"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"/>

            <CheckBox
                android:id="@+id/checkBoxWeekdays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>